--- a/kiddora/templates/base_user.html
+++ b/kiddora/templates/base_user.html
@@ -148,18 +148,18 @@
 <header class="site-header">
     <div class="header-container">
         <div class="logo">
-            <a href="{% url 'core:home' %}">
+            <a href="{% url 'store:home' %}">
                 <img src="{% static 'images/kiddora_logo.PNG' %}" alt="Kiddora">
             </a>
         </div>
 
         <nav class="main-nav">
             <ul>
-                <li><a href="{% url 'core:home' %}">Home</a></li>
-                <li><a href="{% url 'core:about_us' %}">About Us</a></li>
+                <li><a href="{% url 'store:home' %}">Home</a></li>
+                <li><a href="{% url 'store:about_us' %}">About Us</a></li>
                 <li><a href="#">Categories</a></li>
                 <li><a href="#">Shop</a></li>
-                <li><a href="{% url 'core:contact_us' %}">Contact</a></li>
+                <li><a href="{% url 'store:contact_us' %}">Contact</a></li>
             </ul>
         </nav>
 
@@ -194,18 +194,18 @@
         <div class="footer-column">
             <h4>Info</h4>
             <ul>
-                <li><a href="{% url 'core:about_us' %}">About Us</a></li>
-                <li><a href="{% url 'core:contact_us' %}">Contact</a></li>
-                <li><a href="{% url 'core:blog' %}">Blog</a></li>
+                <li><a href="{% url 'store:about_us' %}">About Us</a></li>
+                <li><a href="{% url 'store:contact_us' %}">Contact</a></li>
+                <li><a href="{% url 'store:blog' %}">Blog</a></li>
             </ul>
         </div>
 
         <div class="footer-column">
             <h4>Policies</h4>
             <ul>
-                <li><a href="{% url 'core:privacy_policy' %}">Privacy</a></li>
-                <li><a href="{% url 'core:return_policy' %}">Returns</a></li>
-                <li><a href="{% url 'core:terms_conditions' %}">Terms</a></li>
+                <li><a href="{% url 'store:privacy_policy' %}">Privacy</a></li>
+                <li><a href="{% url 'store:return_policy' %}">Returns</a></li>
+                <li><a href="{% url 'store:terms_conditions' %}">Terms</a></li>
             </ul>
         </div>
 
