--- a/kiddora/templates/core/notlogged_home.html
+++ b/kiddora/templates/core/notlogged_home.html
@@ -350,15 +350,15 @@ ul {
     <header class="site-header">
         <div class="header-container">
             <div class="logo">
-                <a href="{% url 'core:anonymous_user_home' %}"><img src="{% static 'images/kiddora_logo.PNG' %}" alt="Kiddora Logo"></a>
+                <a href="{% url 'store:anonymous_user_home' %}"><img src="{% static 'images/kiddora_logo.PNG' %}" alt="Kiddora Logo"></a>
             </div>
             <nav class="main-nav">
                 <ul>
-                    <li><a href="{% url 'core:anonymous_user_home' %}">Home</a></li>
-                    <li><a href="{% url 'core:about_us' %}">About Us</a></li>
+                    <li><a href="{% url 'store:anonymous_user_home' %}">Home</a></li>
+                    <li><a href="{% url 'store:about_us' %}">About Us</a></li>
                     <li><a href="#">Categories</a></li>
                     <li><a href="#">Shop</a></li>
-                    <li><a href="{% url 'core:contact_us' %}">Contact</a></li>
+                    <li><a href="{% url 'store:contact_us' %}">Contact</a></li>
                 </ul>
             </nav>
             <div class="auth-buttons">
@@ -499,18 +499,18 @@ ul {
             <div class="footer-column">
                 <h4>Info</h4>
                 <ul>
-                    <li><a href="{% url 'core:contact_us' %}">Contact Us</a></li>
-                    <li><a href="{% url 'core:about_us' %}">About Us</a></li>
-                    <li><a href="{% url 'core:blog' %}">Blog</a></li>
+                    <li><a href="{% url 'store:contact_us' %}">Contact Us</a></li>
+                    <li><a href="{% url 'store:about_us' %}">About Us</a></li>
+                    <li><a href="{% url 'store:blog' %}">Blog</a></li>
                 </ul>
             </div>
             <div class="footer-column">
                 <h4>Policies</h4>
                 <ul>
-                    <li><a href="{% url 'core:privacy_policy' %}">Privacy Notice</a></li>
-                    <li><a href="{% url 'core:return_policy' %}">Return Policy</a></li>
-                    <li><a href="{% url 'core:terms_conditions' %}">Terms and Conditions</a></li>
-                    <li><a href="{% url 'core:cookie_policy' %}">Cookie Policy</a></li>
+                    <li><a href="{% url 'store:privacy_policy' %}">Privacy Notice</a></li>
+                    <li><a href="{% url 'store:return_policy' %}">Return Policy</a></li>
+                    <li><a href="{% url 'store:terms_conditions' %}">Terms and Conditions</a></li>
+                    <li><a href="{% url 'store:cookie_policy' %}">Cookie Policy</a></li>
                 </ul>
             </div>
             <div class="footer-column">
