--- a/kiddora/templates/core/home.html
+++ b/kiddora/templates/core/home.html
@@ -270,18 +270,18 @@ ul { list-style:none; }
 <header class="site-header">
     <div class="header-container">
         <div class="logo">
-            <a href="{% url 'core:anonymous_user_home' %}">
+            <a href="{% url 'store:anonymous_user_home' %}">
                 <img src="{% static 'images/kiddora_logo.PNG' %}">
             </a>
         </div>
 
         <nav class="main-nav">
             <ul>
-                <li><a href="{% url 'core:anonymous_user_home' %}">Home</a></li>
-                <li><a href="{% url 'core:about_us' %}">About Us</a></li>
+                <li><a href="{% url 'store:anonymous_user_home' %}">Home</a></li>
+                <li><a href="{% url 'store:about_us' %}">About Us</a></li>
                 <li><a href="#">Categories</a></li>
                 <li><a href="#">Shop</a></li>
-                <li><a href="{% url 'core:contact_us' %}">Contact</a></li>
+                <li><a href="{% url 'store:contact_us' %}">Contact</a></li>
             </ul>
         </nav>
 
@@ -294,7 +294,7 @@ ul { list-style:none; }
             <a href="#" class="icon-btn"><i class="fa-regular fa-heart"></i></a>
             <a href="{% url 'accounts:profile' %}" class="icon-btn profile"><i class="fa-regular fa-user"></i></a>
             <a href="#" class="icon-btn"><i class="fa fa-shopping-cart"></i></a>
-            <a href="{% url 'core:anonymous_user_home' %}" class="logout-btn">Logout</a>
+            <a href="{% url 'store:anonymous_user_home' %}" class="logout-btn">Logout</a>
         </div>
     </div>
 </header>
@@ -425,17 +425,17 @@ ul { list-style:none; }
         <div class="footer-column">
             <h4>Info</h4>
             <ul>
-                <li><a href="{% url 'core:contact_us' %}">Contact Us</a></li>
-                <li><a href="{% url 'core:about_us' %}">About Us</a></li>
-                <li><a href="{% url 'core:blog' %}">Blog</a></li>
+                <li><a href="{% url 'store:contact_us' %}">Contact Us</a></li>
+                <li><a href="{% url 'store:about_us' %}">About Us</a></li>
+                <li><a href="{% url 'store:blog' %}">Blog</a></li>
             </ul>
         </div>
         <div class="footer-column">
             <h4>Policies</h4>
             <ul>
-                <li><a href="{% url 'core:privacy_policy' %}">Privacy Notice</a></li>
-                <li><a href="{% url 'core:return_policy' %}">Return Policy</a></li>
-                <li><a href="{% url 'core:terms_conditions' %}">Terms & Conditions</a></li>
+                <li><a href="{% url 'store:privacy_policy' %}">Privacy Notice</a></li>
+                <li><a href="{% url 'store:return_policy' %}">Return Policy</a></li>
+                <li><a href="{% url 'store:terms_conditions' %}">Terms & Conditions</a></li>
             </ul>
         </div>
         <div class="footer-column">
